layout issues solved

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,8 @@
     display: none;
 }
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
